--- a/WorkTime.Web/appsettings.json
+++ b/WorkTime.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OCA11UA;Database=WT_TwinTech3;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "workstation id=worktime.mssql.somee.com;packet size=4096;user id=AndreyIgonin_SQLLogin_1;pwd=i5dd84ogox;data source=worktime.mssql.somee.com;persist security info=False;initial catalog=worktime"
   },
   "Logging": {
     "LogLevel": {
