--- a/WorkTime.Web/appsettings.json
+++ b/WorkTime.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=tesett1111.mssql.somee.com;packet size=4096;user id=AndreyIgonin_SQLLogin_1;pwd=kvixvd614a;data source=tesett1111.mssql.somee.com;persist security info=False;initial catalog=tesett1111"
+    "DefaultConnection": "workstation id=worktimeasd.mssql.somee.com;packet size=4096;user id=AndreyIgonin_SQLLogin_1;pwd=oqdkqgbdzc;data source=worktimeasd.mssql.somee.com;persist security info=False;initial catalog=worktimeasd"
   },
   "Logging": {
     "LogLevel": {
