--- a/WorkTime.Web/appsettings.json
+++ b/WorkTime.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=worktimeasd.mssql.somee.com;packet size=4096;user id=AndreyIgonin_SQLLogin_1;pwd=oqdkqgbdzc;data source=worktimeasd.mssql.somee.com;persist security info=False;initial catalog=worktimeasd"
+    "DefaultConnection": "workstation id=asdasd123aa.mssql.somee.com;packet size=4096;user id=AndreyIgonin_SQLLogin_1;pwd=u5ijv7iv5o;data source=asdasd123aa.mssql.somee.com;persist security info=False;initial catalog=asdasd123aa"
   },
   "Logging": {
     "LogLevel": {
