--- a/WorkTime.Web/WorkTime.Web.csproj
+++ b/WorkTime.Web/WorkTime.Web.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\WorkTime.Models\WorkTime.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Temp\" />
+  </ItemGroup>
+
 </Project>
