--- a/WorkTime.Web/WorkTime.Web.csproj
+++ b/WorkTime.Web/WorkTime.Web.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-WT_CRM-28c9a7c6-5991-4ee8-a9ab-927ca0102728</UserSecretsId>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
